compare50/html_renderer/static/compare50.css
/* Make text more readable */
body, h1, h4, h5 {
    counter-reset: line_numbers;
}

pre {
  overflow-y: hidden;
}

.sub_name {
    height: 2em;
    margin-top: 0.33em;
}

#diff {
    height: calc(100% - 2em);
}

#left {
  overflow-y: scroll;
  left: 0;
  border: 1px solid black;
  border-top: 0;
  max-width: 50%;
  height: 100%;
}

#right {
  overflow-y: scroll;
  right: 0;
  border: 1px solid black;
  border-left: 0;
  border-top: 0;
  max-width: 50%;
  height: 100%;
}

.fragment:before {
  counter-reset: none;
}

/* highlighted code fragments */
.match {
    background-color: #FFCC00;
}

.active_match {
    font-weight: bold;
    background-color: #DC3545;
    color: white;
    cursor: pointer;
}

/* style code samples */
.submission-file {
  border-top: 1px solid black;
  white-space: pre-wrap;
}
.submission-file code.newline {
  counter-increment: line_numbers;
}
.submission-file code.newline::before {
  content: counter(line_numbers) "";
  display: inline-block;
  width: 3em;
  border-right: 1px solid black;
  margin-right: 0.5em;
  padding-right: 1em;
  text-align: right;
  padding 0 0.5em;
  color: black;
}

.line {
    line-height: 1em;
    font-family: Inconsolata, monospace;
}

